--- a/balasahebstory.html
+++ b/balasahebstory.html
@@ -10,94 +10,137 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
     <link rel="stylesheet" href="Css/slide.css">
-    <link rel="stylesheet" href="Css/story.css">
+    <link rel="stylesheet" href="Css/st.css">
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="index.html" class="navbar-brand">
-                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-                <span class="shivsena-text">शिवसेना India</span>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
-                </ul>
-            </div>
-    </nav>
-    <!-- Navbar End -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+        <span class="shivsena-text">शिवसेना India</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Navbar End -->
 
 
     <br>
     <section>
-        <div class="story-container">
-            <div class="story">
-                <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-                <div class="three">
-                    <h1>Balasaheb Thackeray</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="title">Balasaheb Thackeray</h1>
                 </div>
             </div>
-            <p class="image-p">Balasaheb Thackeray, whose full name was Bal Keshav Thackeray, was a prominent Indian
-                political leader and the founder of the Shiv Sena party. Here are some key details about Balasaheb
-                Thackeray: Early Life: Balasaheb Thackeray was born on January 23, 1926, in Pune, Maharashtra, India. He
-                came from a Maharashtrian family with a background in journalism. Journalism Career: Thackeray started
-                his career as a cartoonist and journalist. He worked for various newspapers, including Free Press
-                Journal and Marmik, where he gained recognition for his satirical cartoons and writings. Shiv Sena:
-                Balasaheb Thackeray founded the Shiv Sena party on June 19, 1966, with the aim of championing the rights
-                and interests of the Marathi-speaking population in Maharashtra. Under his leadership, Shiv Sena evolved
-                into a prominent political force with a strong regional identity and a focus on Hindutva ideology.</p>
-            <img src="image/balasahebNew.jpg" id="titlebox" alt="">
-            <p>Political Stance: Balasaheb Thackeray was known for his strong and controversial stances on various
-                issues. He advocated for the rights of the locals, especially in matters of employment and language, and
-                emphasized the preservation of Marathi culture. Thackeray also took a strong stand on national security,
-                illegal immigration, and communal issues. Leadership and Influence: Balasaheb Thackeray's leadership
-                style was characterized by his powerful oratory, direct and often provocative language, and the ability
-                to connect with the masses. He was known for his assertive and uncompromising approach to politics.
-                Political Alliances: Over the years, Shiv Sena, under Thackeray's leadership, formed alliances with
-                various political parties at the state and national levels. It had a long-standing alliance with the
-                Bharatiya Janata Party (BJP) and was a key constituent of the National Democratic Alliance (NDA).
-                Legacy: Balasaheb Thackeray's influence extended beyond politics. He was widely recognized as a strong
-                leader who championed the cause of the Marathi-speaking people. His populist appeal and ability to
-                connect with the masses made him a significant figure in Maharashtra politics. Following his death on
-                November 17, 2012, his son Uddhav Thackeray succeeded him as the leader of Shiv Sena. Balasaheb
-                Thackeray's impact on Maharashtra politics and Shiv Sena's growth cannot be understated. He left behind
-                a legacy that continues to shape the party's ideology and approach to governance. Balasaheb Thackeray,
-                also known as Balasaheb, was the driving force behind the establishment and growth of Shiv Sena. He
-                founded the party on June 19, 1966, with the objective of advocating for the rights and welfare of the
-                Marathi-speaking population in Maharashtra, India. Balasaheb was known for his charismatic leadership
-                and strong personality, which resonated with a large section of the population, particularly in
-                Maharashtra. Under his guidance, Shiv Sena developed a unique identity as a right-wing, regional, and
-                Hindu nationalist party. The party focused on promoting Marathi culture, language, and the interests of
-                the local population. Balasaheb's leadership style was characterized by his powerful oratory skills,
-                assertive stance on regional issues, and his ability to mobilize mass support. He was often regarded as
-                a strong advocate for the rights of the common people and a voice for the marginalized sections of
-                society. During his tenure as the leader of Shiv Sena, Balasaheb influenced the party's political
-                strategy, organizational structure, and ideology. He played a pivotal role in shaping Shiv Sena's
-                approach to politics, which included street activism, protests, and an aggressive style of politics.</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="st-img">
+                        <img src="image/balasahebNew.jpg" class="img-fluid" alt="Balasaheb Image">
+                    </div>
+                </div>
+                <div class="col-md-13">
+                    <p class="content">Balasaheb Thackeray, whose full name was Bal Keshav Thackeray, was a prominent
+                        Indian
+                        political leader and the founder of the Shiv Sena party. Here are some key details about
+                        Balasaheb
+                        Thackeray: Early Life: Balasaheb Thackeray was born on January 23, 1926, in Pune, Maharashtra,
+                        India. He
+                        came from a Maharashtrian family with a background in journalism. Journalism Career: Thackeray
+                        started
+                        his career as a cartoonist and journalist. He worked for various newspapers, including Free
+                        Press
+                        Journal and Marmik, where he gained recognition for his satirical cartoons and writings. Shiv
+                        Sena:
+                        Balasaheb Thackeray founded the Shiv Sena party on June 19, 1966, with the aim of championing
+                        the rights
+                        and interests of the Marathi-speaking population in Maharashtra. Under his leadership, Shiv Sena
+                        evolved
+                        into a prominent political force with a strong regional identity and a focus on Hindutva
+                        ideology.</p>
+                    <p class="content">Political Stance: Balasaheb Thackeray was known for his strong and controversial
+                        stances on various
+                        issues. He advocated for the rights of the locals, especially in matters of employment and
+                        language, and
+                        emphasized the preservation of Marathi culture. Thackeray also took a strong stand on national
+                        security,
+                        illegal immigration, and communal issues. Leadership and Influence: Balasaheb Thackeray's
+                        leadership
+                        style was characterized by his powerful oratory, direct and often provocative language, and the
+                        ability
+                        to connect with the masses. He was known for his assertive and uncompromising approach to
+                        politics.
+                        Political Alliances: Over the years, Shiv Sena, under Thackeray's leadership, formed alliances
+                        with
+                        various political parties at the state and national levels. It had a long-standing alliance with
+                        the
+                        Bharatiya Janata Party (BJP) and was a key constituent of the National Democratic Alliance
+                        (NDA).
+                        Legacy: Balasaheb Thackeray's influence extended beyond politics. He was widely recognized as a
+                        strong
+                        leader who championed the cause of the Marathi-speaking people. His populist appeal and ability
+                        to
+                        connect with the masses made him a significant figure in Maharashtra politics. Following his
+                        death on
+                        November 17, 2012, his son Uddhav Thackeray succeeded him as the leader of Shiv Sena. Balasaheb
+                        Thackeray's impact on Maharashtra politics and Shiv Sena's growth cannot be understated. He left
+                        behind
+                        a legacy that continues to shape the party's ideology and approach to governance. Balasaheb
+                        Thackeray,
+                        also known as Balasaheb, was the driving force behind the establishment and growth of Shiv Sena.
+                        He
+                        founded the party on June 19, 1966, with the objective of advocating for the rights and welfare
+                        of the
+                        Marathi-speaking population in Maharashtra, India. Balasaheb was known for his charismatic
+                        leadership
+                        and strong personality, which resonated with a large section of the population, particularly in
+                        Maharashtra. Under his guidance, Shiv Sena developed a unique identity as a right-wing,
+                        regional, and
+                        Hindu nationalist party. The party focused on promoting Marathi culture, language, and the
+                        interests of
+                        the local population. Balasaheb's leadership style was characterized by his powerful oratory
+                        skills,
+                        assertive stance on regional issues, and his ability to mobilize mass support. He was often
+                        regarded as
+                        a strong advocate for the rights of the common people and a voice for the marginalized sections
+                        of
+                        society. During his tenure as the leader of Shiv Sena, Balasaheb influenced the party's
+                        political
+                        strategy, organizational structure, and ideology. He played a pivotal role in shaping Shiv
+                        Sena's
+                        approach to politics, which included street activism, protests, and an aggressive style of
+                        politics.</p>
+                </div>
+            </div>
         </div>
     </section>
     <br>
@@ -105,15 +148,15 @@
 
 
     <!-- Footer -->
-    <footer class="text-white py-5">
+    <footer class="bg-orange text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="">Our Ideology</a></li>
-                        <li><a href="">Our Ministers in Maharashtra Government</a></li>
+                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -132,9 +175,9 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
-                        <li><a href="">Press Releases</a></li>
-                        <li><a href="">Photo Gallery</a></li>
-                        <li><a href="">Video Gallery</a></li>
+                        <li><a href="#">Press Releases</a></li>
+                        <li><a href="#">Photo Gallery</a></li>
+                        <li><a href="#">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -156,7 +199,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer End -->
 
     <!-- Bootstrap JS -->
