--- a/rahulshewale.html
+++ b/rahulshewale.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
     <link rel="stylesheet" href="Css/slide.css">
-    <link rel="stylesheet" href="Css/story.css">
+    <link rel="stylesheet" href="Css/st.css">
 </head>
 
 <body>
@@ -52,55 +52,72 @@
     <!-- Navbar End -->
     <br>
     <section>
-        <div class="story-container">
-            <div class="story">
-                <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-                <div class="three">
-                    <h1>Rahul Ramesh Shewale Ji
-                    </h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="title">Rahul Ramesh Shewale Ji</h1>
                 </div>
             </div>
-            <p class="image-p">Rahul Shewale is an active Indian politician from the Shiv Sena and the Lok Sabha member
-                from the Mumbai South Central constituency. He defeated sitting MP Eknath Gaikwad in the Indian general
-                election, 2014. Shewale is a four-time chairman of the standing committee of the Brihanmumbai Municipal
-                Corporation (BMC), the municipal corporation of the city of Mumbai. He held the position from 2010 to
-                2014.
-            </p>
-            <img src="image/rahulNew.jpg" id="titlebox" alt="">
-            <h1>Early & Personal Life
-            </h1>
-            <p>Rahul Shewale was born on 14 April 1973 to Ramesh Sambhaji Shewale, an Indian Navy officer and Jayashri
-                Shewale, an employee of MTNL. His elder brother Avinash is a software engineer, who has settled in the
-                United States, while his brother Navin is a doctor. He married fellow Shiv Sena politician and BMC
-                corporator Kamini Mayekar (Kamini Shewale) on 14 February 2005. Kamini Shewale is a housewife. The
-                couple have two sons: Swayam and Vedant. Shewale is a Diploma holder in Civil Engineering from
-                Government Polytechnic, Bandra
-            </p>
-            <h1>Career
-            </h1>
-            <p>Rahul Shewale is a two time MP. He holds the record for being elected the Chairman of the standing
-                committee of the BMC most times. Mr. Shewale joined Shiv Sena officially in 2014 when he decided to
-                contest the elections. Rahul Shewale has raised issues in Parliament concerning the renaming of Kings
-                Circle Station in Mumbai and Construction of a B.R Ambedkar Statue at Indu Mill in Mumbai. Rahul Shewale
-                is the first Shiv Sena MP in India and first MP in Maharashtra to get an ISO certification (ISO 9001)
-                for efficient and digital handling of grievance redressal was recently awarded with the ‘Best
-                Parliamentarian’ title. He presented several issues in the Parliament related to infrastructure and
-                environmental concerns.
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="st-img">
+                        <img src="image/rahulNew.jpg" class="img-fluid" alt="rahul shewale Image">
+                    </div>
+                </div>
+                <div class="col-md-13">
+                    <p class="content">Rahul Shewale is an active Indian politician from the Shiv Sena and the Lok Sabha
+                        member
+                        from the Mumbai South Central constituency. He defeated sitting MP Eknath Gaikwad in the Indian
+                        general
+                        election, 2014. Shewale is a four-time chairman of the standing committee of the Brihanmumbai
+                        Municipal
+                        Corporation (BMC), the municipal corporation of the city of Mumbai. He held the position from
+                        2010 to
+                        2014.</p>
+                    <h3>Early & Personal Life</h3>
+                    <p class="content">Rahul Shewale was born on 14 April 1973 to Ramesh Sambhaji Shewale, an Indian
+                        Navy officer and Jayashri
+                        Shewale, an employee of MTNL. His elder brother Avinash is a software engineer, who has settled
+                        in the
+                        United States, while his brother Navin is a doctor. He married fellow Shiv Sena politician and
+                        BMC
+                        corporator Kamini Mayekar (Kamini Shewale) on 14 February 2005. Kamini Shewale is a housewife.
+                        The
+                        couple have two sons: Swayam and Vedant. Shewale is a Diploma holder in Civil Engineering from
+                        Government Polytechnic, Bandra
+                    </p>
+                    <h3>Career</h3>
+                    <p class="content">Rahul Shewale is a two time MP. He holds the record for being elected the
+                        Chairman of the standing
+                        committee of the BMC most times. Mr. Shewale joined Shiv Sena officially in 2014 when he decided
+                        to
+                        contest the elections. Rahul Shewale has raised issues in Parliament concerning the renaming of
+                        Kings
+                        Circle Station in Mumbai and Construction of a B.R Ambedkar Statue at Indu Mill in Mumbai. Rahul
+                        Shewale
+                        is the first Shiv Sena MP in India and first MP in Maharashtra to get an ISO certification (ISO
+                        9001)
+                        for efficient and digital handling of grievance redressal was recently awarded with the ‘Best
+                        Parliamentarian’ title. He presented several issues in the Parliament related to infrastructure
+                        and
+                        environmental concerns.
 
-            </p>
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <br>
     <!-- Footer -->
-    <footer class="text-white py-5">
+    <footer class="bg-orange text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="">Our Ideology</a></li>
-                        <li><a href="">Our Ministers in Maharashtra Government</a></li>
+                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -119,9 +136,9 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
-                        <li><a href="">Press Releases</a></li>
-                        <li><a href="">Photo Gallery</a></li>
-                        <li><a href="">Video Gallery</a></li>
+                        <li><a href="#">Press Releases</a></li>
+                        <li><a href="#">Photo Gallery</a></li>
+                        <li><a href="#">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -143,7 +160,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer End -->
 
     <!-- Bootstrap JS -->
