--- a/anandraoadsul.html
+++ b/anandraoadsul.html
@@ -10,115 +10,123 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
     <link rel="stylesheet" href="Css/slide.css">
-    <link rel="stylesheet" href="Css/story.css">
+    <link rel="stylesheet" href="Css/st.css">
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="index.html" class="navbar-brand">
-                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-                <span class="shivsena-text">शिवसेना India</span>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
-                </ul>
-            </div>
-    </nav>
-    <!-- Navbar End -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+        <span class="shivsena-text">शिवसेना India</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Navbar End -->
     <br>
     <section>
-        <div class="story-container">
-            <div class="story">
-                <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-                <div class="three">
-                    <h1>Anandrao Adsul Ji</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="title">Anandrao Adsul Ji</h1>
                 </div>
             </div>
-            <p class="image-p">Anandrao Vithoba Adsul (born 1 June 1947) was a member of the 16th Lok Sabha of India. He
-                represented the Amravati constituency of Maharashtra and is a member of the Shiv Sena (SS) political
-                party.[1] He had represented the Amravati constituency in 15th Lok Sabha and Buldhana constituency of
-                Maharashtra in the 14th Lok Sabha, 13th Lok Sabha and 11th Lok Sabha. He has been honored with Sansad
-                Ratna Award in 2011, 2012 and 2013.
-            </p>
-            <img src="image/anandRaoNew.jpg" id="titlebox" alt="">
-            <h1>Career</h1>
-            <p>He served as a Member of Parliament (Lok Sabha) from Amravati (Lok Sabha constituency) till 2019. He
-                served as the Union Minister of State for Finance in Prime Minister Atal Bihari Vajpayees cabinet till
-                2004. He was the chairperson of two corporations from 1995 to 1999 in the Shiv Sena-led government in
-                Maharashtra. Adsul contested the 2019 Lok Sabha election as a Shiv Sena candidate, and he lost the
-                election by 30,000 votes to Navneet Kaur Rana, a former Telugu actress who contested the election as an
-                independent candidate.
-            </p>
-            <h1>Positions held</h1>
-            <p>1996: Elected to 11th Lok Sabha (1st term) <br>
-                1999: Re-elected to 13th Lok Sabha (2nd term) <br>
-                Oct. 1999-Jul. 2002: Chief Whip, Shiv Sena Parliamentary Party, Lok Sabha.<br>
-                1999–2002: Member, Committee on Human Resource Development.<br>
-                2000–2002: Member, Committee on Transport and Tourism.<br>
-                Jul. 2002-Aug. 2002: Leader, Shiv Sena Parliamentary Party<br>
-                26 Aug. 2002 - May 2004: Union Minister of State, Ministry of Finance and Company Affairs.<br>
-                2009 Re-elected to 15th Lok Sabha (4th term)<br>
-                6 Aug. 2009 - Member, Committee on Public Accounts<br>
-                31 Aug. 2009 - Member, Committee on Petroleum and Natural Gas<br>
-                23 Sep. 2009 - Member, Committee on Government Assurances<br>
-                5 May 2010 - Member, Committee on Public Accounts.<br>
-                2014: Re-elected to 16th Lok Sabha (5th term)1 Sep. 2014: Chairperson, Standing Committee on Chemicals
-                and Fertilizers.<br>
-                2018: Appointed Leader of Shiv Sena Party.
-            </p>
-            <h1>Political Career
-
-            </h1>
-            <p>Constituency: Adsul has represented the Amravati constituency in the Lok Sabha, the lower house of the
-                Indian Parliament. He has been elected multiple times from this constituency. Political Positions: Adsul
-                has held various political positions during his career. He has been actively involved in party
-                activities and has worked to strengthen the Shiv Sena's presence in his constituency. Parliamentary
-                Contributions: As a Member of Parliament (MP), Adsul has participated in parliamentary debates and
-                discussions on various issues. He has raised concerns related to the welfare of his constituents and has
-                worked on addressing their needs and demands. Committee Memberships: Adsul has been a member of
-                different parliamentary committees, contributing to the legislative process and policy-making. The
-                specific committees he has served on may vary over time.
-
-            </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="st-img">
+                        <img src="image/anandRaoNew.jpg" class="img-fluid" alt="anandRaoNew Image">
+                    </div>
+                </div>
+                <div class="col-md-13">
+                    <p class="content">Anandrao Vithoba Adsul (born 1 June 1947) was a member of the 16th Lok Sabha
+                        of India. He represented the Amravati constituency of Maharashtra and is a member of the
+                        Shiv Sena (SS) political party. He had represented the Amravati constituency in 15th Lok
+                        Sabha and Buldhana constituency of Maharashtra in the 14th Lok Sabha, 13th Lok Sabha and
+                        11th Lok Sabha. He has been honored with Sansad Ratna Award in 2011, 2012 and 2013.</p>
+                    <h3>Career</h3>
+                    <p class="content">He served as a Member of Parliament (Lok Sabha) from Amravati (Lok Sabha
+                        constituency) till
+                        2019. He served as the Union Minister of State for Finance in Prime Minister Atal Bihari
+                        Vajpayee's cabinet till 2004. He was the chairperson of two corporations from 1995 to 1999
+                        in the Shiv Sena-led government in Maharashtra. Adsul contested the 2019 Lok Sabha election
+                        as a Shiv Sena candidate, and he lost the election by 30,000 votes to Navneet Kaur Rana, a
+                        former Telugu actress who contested the election as an independent candidate.</p>
+                    <h3>Positions held</h3>
+                    <p class="content">1996: Elected to 11th Lok Sabha (1st term) <br>
+                        1999: Re-elected to 13th Lok Sabha (2nd term) <br>
+                        Oct. 1999-Jul. 2002: Chief Whip, Shiv Sena Parliamentary Party, Lok Sabha.<br>
+                        1999–2002: Member, Committee on Human Resource Development.<br>
+                        2000–2002: Member, Committee on Transport and Tourism.<br>
+                        Jul. 2002-Aug. 2002: Leader, Shiv Sena Parliamentary Party<br>
+                        26 Aug. 2002 - May 2004: Union Minister of State, Ministry of Finance and Company
+                        Affairs.<br>
+                        2009 Re-elected to 15th Lok Sabha (4th term)<br>
+                        6 Aug. 2009 - Member, Committee on Public Accounts<br>
+                        31 Aug. 2009 - Member, Committee on Petroleum and Natural Gas<br>
+                        23 Sep. 2009 - Member, Committee on Government Assurances<br>
+                        5 May 2010 - Member, Committee on Public Accounts.<br>
+                        2014: Re-elected to 16th Lok Sabha (5th term)1 Sep. 2014: Chairperson, Standing Committee on
+                        Chemicals and Fertilizers.<br>
+                        2018: Appointed Leader of Shiv Sena Party.
+                    </p>
+                    <h3>Political Career</h3>
+                    <p class="content">Constituency: Adsul has represented the Amravati constituency in the Lok Sabha,
+                        the lower
+                        house of the Indian Parliament. He has been elected multiple times from this constituency.
+                        Political Positions: Adsul has held various political positions during his career. He has
+                        been actively involved in party activities and has worked to strengthen the Shiv Sena's
+                        presence in his constituency. Parliamentary Contributions: As a Member of Parliament (MP),
+                        Adsul has participated in parliamentary debates and discussions on various issues. He has
+                        raised concerns related to the welfare of his constituents and has worked on addressing
+                        their needs and demands. Committee Memberships: Adsul has been a member of different
+                        parliamentary committees, contributing to the legislative process and policy-making. The
+                        specific committees he has served on may vary over time.</p>
+                </div>
+            </div>
         </div>
     </section>
+
     <br>
 
     <!-- Footer -->
-    <footer class="text-white py-5">
+    <footer class="bg-orange text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="">Our Ideology</a></li>
-                        <li><a href="">Our Ministers in Maharashtra Government</a></li>
+                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -137,9 +145,9 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
-                        <li><a href="">Press Releases</a></li>
-                        <li><a href="">Photo Gallery</a></li>
-                        <li><a href="">Video Gallery</a></li>
+                        <li><a href="#">Press Releases</a></li>
+                        <li><a href="#">Photo Gallery</a></li>
+                        <li><a href="#">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -161,7 +169,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer End -->
 
     <!-- Bootstrap JS -->
