--- a/anshuman.html
+++ b/anshuman.html
@@ -10,106 +10,135 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
     <link rel="stylesheet" href="Css/slide.css">
-    <link rel="stylesheet" href="Css/story.css">
+    <link rel="stylesheet" href="Css/st.css">
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="index.html" class="navbar-brand">
-                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-                <span class="shivsena-text">शिवसेना India</span>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
-                </ul>
-            </div>
-    </nav>
-    <!-- Navbar End -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+        <span class="shivsena-text">शिवसेना India</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Navbar End -->
     <br>
     <section>
-        <div class="story-container">
-            <div class="story">
-                <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-                <div class="three">
-                    <h1>Anshumman Joshi Ji</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="title">Anshumman Joshi Ji</h1>
                 </div>
             </div>
-            <p class="image-p">Anshumman Joshi Ji is an Trustee, 108 Ft.Sankat Mochan Dham, Jhandewala, Karol Bagh with
-                absolute dedication towards all of religious programs and organizes a number of religious major events
-                at the Hanuman Ji Temple.
-            </p>
-            <img src="image/anshumman.jpg" id="titlebox" alt="">
-            <h1>Profession : Business</h1>
-            <p>Philanthropist, Entrepreneur, Social Worker, RTI Activist, Corporate Head Honcho, Private Equity
-                Investor, Banker, Cooperator, Rights Activist, Litigant to protect the integrity of Democracy in the
-                Cooperative Sector also a Policy Framework Designer for the Growth of the Sector, a Savior for the
-                Cooperative Banking Sector for Urban Cooperative Banks Across the Country, Policymaker, Financial Budget
-                Strategist, Brainstormer for Development of the Country
-            </p>
-            <h1>Social and Cultural Activities</h1>
-            <p>Literary, Artistic and Scientific Founder, Dhanvarsha Group A Business Group focused on Saving the
-                Cooperative Movement, Urban Cooperative Banks across the country are given free legal support to save
-                the existence of the movement, Infusion of Capital into weak banks as per Section 12 of the Banking
-                Regulations Amendment Act.2020 by way of Private Placement. Fought for the movement in various courts
-                across
-            </p>
-            <h1>Accomplishments and other Special Interests</h1>
-            <p>The country to ensure the banks licenses are not cancelled & the same do not come under the directions of
-                Section 35A of the Banking Regulations Act. 1949. Running Corruption Free India (NGO/Trust ) working
-                towards the upliftment of the prisoners languishing prisons making them independent in skilled works
-                like Tailoring signed MOUs with several Prisons to train the convicted prisoners while they are serving
-                their sentence so that they are self rel iant once they are released after service their period in order
-                to ensure they know how can they earn a living because of being trained as a toiler . Offering Food to
-                the needy at Hanuman ji Temple, Jhandewalan, Karol Bagh & Various Gurudwaras across Delhi on a daily
-                basis over a 1000 plus people are fed
-            </p>
-            <h1>Other Information</h1>
-            <p>Has undertaken initiatives in social engineering in order to promote harmony and unity in the country;
-                organizing special meetings and programmes with the objective of providing guidance to several Urban
-                Cooperative Banks & also help them become compliant to the regulatory norms. Working for the skill
-                development in the country and has played an important role in the growth of the Urban Cooperative
-                Banking Industry in India
-            </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="st-img">
+                        <img src="image/anshumman.jpg" class="img-fluid" alt="anshumman Image">
+                    </div>
+                </div>
+                <div class="col-md-13">
+                    <p class="content">Anshumman Joshi Ji is an Trustee, 108 Ft.Sankat Mochan Dham, Jhandewala, Karol
+                        Bagh with
+                        absolute dedication towards all of religious programs and organizes a number of religious major
+                        events
+                        at the Hanuman Ji Temple.</p>
+                    <h3>Profession : Business</h3>
+                    <p class="content">Philanthropist, Entrepreneur, Social Worker, RTI Activist, Corporate Head Honcho,
+                        Private Equity
+                        Investor, Banker, Cooperator, Rights Activist, Litigant to protect the integrity of Democracy in
+                        the
+                        Cooperative Sector also a Policy Framework Designer for the Growth of the Sector, a Savior for
+                        the
+                        Cooperative Banking Sector for Urban Cooperative Banks Across the Country, Policymaker,
+                        Financial Budget
+                        Strategist, Brainstormer for Development of the Country
+                    </p>
+                    <h3>Social and Cultural Activities</h3>
+                    <p class="content">Literary, Artistic and Scientific Founder, Dhanvarsha Group A Business Group
+                        focused on Saving the
+                        Cooperative Movement, Urban Cooperative Banks across the country are given free legal support to
+                        save
+                        the existence of the movement, Infusion of Capital into weak banks as per Section 12 of the
+                        Banking
+                        Regulations Amendment Act.2020 by way of Private Placement. Fought for the movement in various
+                        courts
+                        across
+                    </p>
+                    <h3>Accomplishments and other Special Interests</h3>
+                    <p class="content">The country to ensure the banks licenses are not cancelled & the same do not come
+                        under the directions of
+                        Section 35A of the Banking Regulations Act. 1949. Running Corruption Free India (NGO/Trust )
+                        working
+                        towards the upliftment of the prisoners languishing prisons making them independent in skilled
+                        works
+                        like Tailoring signed MOUs with several Prisons to train the convicted prisoners while they are
+                        serving
+                        their sentence so that they are self rel iant once they are released after service their period
+                        in order
+                        to ensure they know how can they earn a living because of being trained as a toiler . Offering
+                        Food to
+                        the needy at Hanuman ji Temple, Jhandewalan, Karol Bagh & Various Gurudwaras across Delhi on a
+                        daily
+                        basis over a 1000 plus people are fed
+                    </p>
+                    <h3>Other Information</h3>
+                    <p class="content">Has undertaken initiatives in social engineering in order to promote harmony and
+                        unity in the country;
+                        organizing special meetings and programmes with the objective of providing guidance to several
+                        Urban
+                        Cooperative Banks & also help them become compliant to the regulatory norms. Working for the
+                        skill
+                        development in the country and has played an important role in the growth of the Urban
+                        Cooperative
+                        Banking Industry in India
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <br>
 
 
     <!-- Footer -->
-    <footer class="text-white py-5">
+    <footer class="bg-orange text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="">Our Ideology</a></li>
-                        <li><a href="">Our Ministers in Maharashtra Government</a></li>
+                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -128,9 +157,9 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
-                        <li><a href="">Press Releases</a></li>
-                        <li><a href="">Photo Gallery</a></li>
-                        <li><a href="">Video Gallery</a></li>
+                        <li><a href="#">Press Releases</a></li>
+                        <li><a href="#">Photo Gallery</a></li>
+                        <li><a href="#">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -152,7 +181,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer End -->
 
     <!-- Bootstrap JS -->
