--- a/constitution.html
+++ b/constitution.html
@@ -18,14 +18,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -40,93 +40,94 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
-                    <div class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
+                    </li>
                 </ul>
             </div>
+        </div>
     </nav>
+
     <!-- Navbar End -->
 
-  <section>
-    <div class="Constitution">
-      <h1>Constitution</h1>
-      <a target="_blank" href="constitution/constitution.pdf">
-        <img src="constitution/constitution.jpg" alt="">
-      </a>
-      <a class="gallery-button" href="constitution/constitution.pdf" download>Download</a>
-    </div>
-  </section>
+    <section>
+        <div class="Constitution">
+            <h1>Constitution</h1>
+            <a target="_blank" href="constitution/constitution.pdf">
+                <img src="constitution/constitution.jpg" alt="">
+            </a>
+            <a class="gallery-button" href="constitution/constitution.pdf" download>Download</a>
+        </div>
+    </section>
 
     <!-- Footer -->
-    <footer class="text-white py-5">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-3 col-sm-6">
-                  <h3>The Party</h3>
-                  <ul class="list-unstyled">
-                    <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                    <li><a href="">Our Ideology</a></li>
-                      <li><a href="">Our Ministers in Maharashtra Government</a></li>
-                  </ul>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                  <h3>Leadership</h3>
-                  <ul class="list-unstyled">
-                      <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
-                      <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
-                      <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
-                      <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
-                      <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
-                      <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
-                      <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
-                      <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
-                  </ul>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                  <h3>Media Resource</h3>
-                  <ul class="list-unstyled">
-                      <li><a href="">Press Releases</a></li>
-                      <li><a href="">Photo Gallery</a></li>
-                      <li><a href="">Video Gallery</a></li>
-                  </ul>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                  <h3>Documents</h3>
-                  <ul class="list-unstyled">
-                      <li><a href="constitution.html">Constitution</a></li>
-                  </ul>
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-12">
-                  <div class="text-center">
-                      <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
-                  </div>
-                  <div class="copy-text text-center mt-3">
-                      <p>Shivsena India | &#169; 2023</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
+    <footer class="bg-orange text-white py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <h3>The Party</h3>
+                    <ul class="list-unstyled">
+                        <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
+                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <h3>Leadership</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
+                        <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
+                        <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
+                        <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
+                        <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+                        <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
+                        <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
+                        <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <h3>Media Resource</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Press Releases</a></li>
+                        <li><a href="#">Photo Gallery</a></li>
+                        <li><a href="#">Video Gallery</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <h3>Documents</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="constitution.html">Constitution</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-center">
+                        <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
+                    </div>
+                    <div class="copy-text text-center mt-3">
+                        <p>Shivsena India | &#169; 2023</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer End -->
 
-  <!-- Footer End -->
-
-  <!-- Bootstrap JS -->
-  <script src="JavaScript/slide.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="JavaScript/slide.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
