--- a/contact.html
+++ b/contact.html
@@ -2,127 +2,149 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shivsena</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
-    <link rel="stylesheet" href="Css/slide.css">
-    <link rel="stylesheet" href="Css/contact.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shivsena</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
+  <link rel="stylesheet" href="Css/slide.css">
+  <link rel="stylesheet" href="Css/contact.css">
+  <script>
+    function validatePhoneNumber() {
+      var phoneNumber = document.getElementById('phone').value;
+      var phoneNumberPattern = /^\d{10}$/; // Regular expression for 10 digits
+
+      if (phoneNumberPattern.test(phoneNumber)) {
+        // Valid phone number
+        document.getElementById('phoneError').innerText = '';
+        return true;
+      } else {
+        // Invalid phone number
+        document.getElementById('phoneError').innerText = 'Phone number should have exactly 10 digits.';
+        return false;
+      }
+    }
+  </script>
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="index.html" class="navbar-brand">
-                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-                <span class="shivsena-text">शिवसेना India</span>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
-                </ul>
-            </div>
-    </nav>
-    <!-- Navbar End -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+        <span class="shivsena-text">शिवसेना India</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Navbar End -->
 
   <!-- Contact Form -->
-  <div class="input-box">
-    <div class="container-con">
-      <div class="title">CONTACT US !</div>
-      <div class="content">
-        <form action="connect.php" method="post">
-          <div class="user-details">
-
-            <div class="input-box">
-              <span class="details">Full Name</span>
-              <input type="text" name="Name" placeholder="Enter your name" required>
-            </div>
-
-            <div class="input-box">
-              <span class="details">Email</span>
-              <input type="email" name="Email" placeholder="Enter your email" required>
-            </div>
-
-            <div class="input-box">
-              <span class="details">Phone Number</span>
-              <input type="number" name="Number" placeholder="Enter your number" required>
-            </div>
-
-            <div class="input-box">
-              <input type="radio" name="Gender" id="dot-1" value="Male">
-              <input type="radio" name="Gender" id="dot-2" value="Female">
-              <input type="radio" name="Gender" id="dot-3" value="Other">
-              <span class="Gender-title">Gender</span>
-
-              <div class="category">
-                <label for="dot-1">
-                  <span class="dot one"></span>
-                  <span class="Gender">Male</span>
-                </label>
-
-                <label for="dot-2">
-                  <span class="dot two"></span>
-                  <span class="Gender">Female</span>
-                </label>
-
-                <label for="dot-3">
-                  <span class="dot three"></span>
-                  <span class="Gender">Other</span>
-                </label>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header text-center">
+            <h2>Contact Us!</h2>
+          </div>
+          <div class="card-body">
+            <form action="connect.php" method="post" onsubmit="return validatePhoneNumber()">
+              <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" class="form-control" id="name" name="Name" placeholder="Enter your name" required>
               </div>
-            </div>
-
-            <div class="input-box-ms">
-              <span class="details-ms">Message</span>
-            </div><textarea name="About" id="" cols="80" rows="4"></textarea>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" name="Email" placeholder="Enter your email"
+                  required>
+              </div>
+              <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <select class="custom-select" id="countryCode" name="CountryCode">
+                      <option selected>+1</option>
+                      <option>+91</option>
+                      <option>+44</option>
+                      <!-- Add more country codes as needed -->
+                    </select>
+                  </div>
+                  <input type="number" class="form-control" id="phone" name="Number" placeholder="Enter your number"
+                    required>
+                </div>
+              </div>
+              <div class="form-group">
+                <label>Gender</label>
+                <div class="form-check">
+                  <input type="radio" class="form-check-input" id="male" name="Gender" value="Male" required>
+                  <label class="form-check-label" for="male">Male</label>
+                </div>
+                <div class="form-check">
+                  <input type="radio" class="form-check-input" id="female" name="Gender" value="Female" required>
+                  <label class="form-check-label" for="female">Female</label>
+                </div>
+                <div class="form-check">
+                  <input type="radio" class="form-check-input" id="other" name="Gender" value="Other" required>
+                  <label class="form-check-label" for="other">Other</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" name="About" rows="4"></textarea>
+              </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
           </div>
-
-          <div class="button">
-            <input type="submit" value="Submit">
-          </div>
-
-        </form>
+        </div>
       </div>
     </div>
   </div>
+
+
   <!-- Contact Form End -->
 
   <!-- Footer -->
-  <footer class="text-white py-5">
+  <footer class="bg-orange text-white py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <h3>The Party</h3>
           <ul class="list-unstyled">
             <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-            <li><a href="">Our Ideology</a></li>
-            <li><a href="">Our Ministers in Maharashtra Government</a></li>
+            <li><a href="#">Our Ideology</a></li>
+            <li><a href="#">Our Ministers in Maharashtra Government</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6">
@@ -141,9 +163,9 @@
         <div class="col-md-3 col-sm-6">
           <h3>Media Resource</h3>
           <ul class="list-unstyled">
-            <li><a href="">Press Releases</a></li>
-            <li><a href="">Photo Gallery</a></li>
-            <li><a href="">Video Gallery</a></li>
+            <li><a href="#">Press Releases</a></li>
+            <li><a href="#">Photo Gallery</a></li>
+            <li><a href="#">Video Gallery</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6">
@@ -165,7 +187,6 @@
       </div>
     </div>
   </footer>
-
   <!-- Footer End -->
 
   <!-- Bootstrap JS -->
