--- a/drshrikant.html
+++ b/drshrikant.html
@@ -2,110 +2,119 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shivsena</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
-    <link rel="stylesheet" href="Css/slide.css">
-    <link rel="stylesheet" href="Css/story.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shivsena</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
+  <link rel="stylesheet" href="Css/slide.css">
+  <link rel="stylesheet" href="Css/st.css">
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="index.html" class="navbar-brand">
-                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-                <span class="shivsena-text">शिवसेना India</span>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
-                </ul>
-            </div>
-    </nav>
-    <!-- Navbar End -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+        <span class="shivsena-text">शिवसेना India</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar End -->
   <br>
   <section>
-    <div class="story-container">
-      <div class="story">
-        <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-        <div class="three">
-          <h1>Dr.Shrikant Shinde ji</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-9">
+          <h1 class="title">Dr.Shrikant Shinde ji</h1>
         </div>
       </div>
-      <p class="image-p">Shrikant Eknath Shinde ji is a member of the 17th Lok Sabah of India. He represents the
-        Kalyan constituency of Maharashtra and is a member of the Shiv Sena political party. He is the son of
-        Eknath Shinde ji the Cabinet Minister of Public Works (MSRDC, Public Undertaking) in the Government of
-        Maharashtra. At the time of his 2014 election win, he was a final-year Master's student of orthopedics.
-      </p>
-      <img src="image/shrikantNew1.jpg" id="titlebox" alt="">
-      <h1>Shrikant Shinde ji Birth, Education, and Family</h1>
-      <p>Shrikant Shinde ji was born on 4 February 1987 in Mumbai, Maharashtra, India. She belongs to a Hindu
-        family. Shrikant Shindes fathers name is Eknath Shinde ji. Let us tell you that Shrikant ji is the CM of
-        Maharashtra state. Apart from this, his mothers name is Lata Shinde (Shrikant Shinde Mothers Name). Lata
-        is a business woman by profession. Srikanth also had a brother and a sister named Dipesh Shinde and
-        Shubhada Shinde. Please tell that Srikanths brother and sister died on June 2, 2000, after their boat
-        capsized in the lake with this Srikanth is a married person. Shrikant Shindes wifes name is Vrushali
-        Shinde. Vrushali and Srikanth also have a younger son named Rudransh Shinde. Dr. Shrikant Shinde ji is a
-        livewire Medico (MBBS, M.S. Orthopedics). He completed his M.S. from Dr. D.Y. Patil Medical College,
-        Navi Mumbai. Shindes family members include Father Shri. Eknath Shinde ji, Mother Smt. Lata Eknath
-        Shinde, wife Vrushali Shrikant Shinde and his son Rudransh. Shinde got elected as a Member of Parliament
-        in 2014 just two months before the final exam of M.S. He is a very enthusiastic person who likes making
-        positive changes to influence the common man. He looks after Kalyan Constituency and ensures making good
-        decisions for the youth and all its citizens. He has been the MP of the densely populated constituency
-        since May 2014. He won the election a second time in May 2019.</p>
-      <h1>Shrikant Shinde Political Career</h1>
-      <p>Shrikant Eknath Shinde, also known as Dr. Shrikant Shinde, is a prominent political figure associated
-        with the Shiv Sena party in Maharashtra, India. Here is an overview of his political career: Early
-        Political Engagement: Shrikant Shinde joined the Shiv Sena party and became an active member early in
-        his political career. He participated in party activities and worked on strengthening the partys
-        organization at the grassroots level. Roles within the Party: Shrikant Shinde has held various
-        leadership positions within the Shiv Sena. He has been involved in party affairs and has contributed to
-        the partys growth and development. Political Office: Shrikant Shinde has served as a Member of the
-        Maharashtra Legislative Assembly (MLA) from the Kalyan Rural constituency. As an MLA, he has represented
-        the interests of his constituents and worked on addressing their concerns. Ministerial Positions:
-        Shrikant Shinde has held important ministerial portfolios in the Maharashtra state government. He has
-        been a Cabinet Minister, handling significant responsibilities related to governance and administration.
-      </p>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="st-img">
+            <img src="image/shrikantNew1.jpg" class="img-fluid" alt="shrikantNew1 Image">
+          </div>
+        </div>
+        <div class="col-md-13">
+          <p class="content">Shrikant Eknath Shinde ji is a member of the 17th Lok Sabah of India. He represents the
+            Kalyan constituency of Maharashtra and is a member of the Shiv Sena political party. He is the son of
+            Eknath Shinde ji the Cabinet Minister of Public Works (MSRDC, Public Undertaking) in the Government of
+            Maharashtra. At the time of his 2014 election win, he was a final-year Master's student of orthopedics.</p>
+          <h3>Shrikant Shinde ji Birth, Education, and Family</h3>
+          <p class="content">Shrikant Shinde ji was born on 4 February 1987 in Mumbai, Maharashtra, India. She belongs
+            to a Hindu
+            family. Shrikant Shindes fathers name is Eknath Shinde ji. Let us tell you that Shrikant ji is the CM of
+            Maharashtra state. Apart from this, his mothers name is Lata Shinde (Shrikant Shinde Mothers Name). Lata
+            is a business woman by profession. Srikanth also had a brother and a sister named Dipesh Shinde and
+            Shubhada Shinde. Please tell that Srikanths brother and sister died on June 2, 2000, after their boat
+            capsized in the lake with this Srikanth is a married person. Shrikant Shindes wifes name is Vrushali
+            Shinde. Vrushali and Srikanth also have a younger son named Rudransh Shinde. Dr. Shrikant Shinde ji is a
+            livewire Medico (MBBS, M.S. Orthopedics). He completed his M.S. from Dr. D.Y. Patil Medical College,
+            Navi Mumbai. Shindes family members include Father Shri. Eknath Shinde ji, Mother Smt. Lata Eknath
+            Shinde, wife Vrushali Shrikant Shinde and his son Rudransh. Shinde got elected as a Member of Parliament
+            in 2014 just two months before the final exam of M.S. He is a very enthusiastic person who likes making
+            positive changes to influence the common man. He looks after Kalyan Constituency and ensures making good
+            decisions for the youth and all its citizens. He has been the MP of the densely populated constituency
+            since May 2014. He won the election a second time in May 2019.</p>
+          <h3>Shrikant Shinde Political Career</h3>
+          <p class="content">Shrikant Eknath Shinde, also known as Dr. Shrikant Shinde, is a prominent political figure
+            associated
+            with the Shiv Sena party in Maharashtra, India. Here is an overview of his political career: Early
+            Political Engagement: Shrikant Shinde joined the Shiv Sena party and became an active member early in
+            his political career. He participated in party activities and worked on strengthening the partys
+            organization at the grassroots level. Roles within the Party: Shrikant Shinde has held various
+            leadership positions within the Shiv Sena. He has been involved in party affairs and has contributed to
+            the partys growth and development. Political Office: Shrikant Shinde has served as a Member of the
+            Maharashtra Legislative Assembly (MLA) from the Kalyan Rural constituency. As an MLA, he has represented
+            the interests of his constituents and worked on addressing their concerns. Ministerial Positions:
+            Shrikant Shinde has held important ministerial portfolios in the Maharashtra state government. He has
+            been a Cabinet Minister, handling significant responsibilities related to governance and administration.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
   <br>
   <!-- Footer -->
-  <footer class="text-white py-5">
+  <footer class="bg-orange text-white py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <h3>The Party</h3>
           <ul class="list-unstyled">
             <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-            <li><a href="">Our Ideology</a></li>
-            <li><a href="">Our Ministers in Maharashtra Government</a></li>
+            <li><a href="#">Our Ideology</a></li>
+            <li><a href="#">Our Ministers in Maharashtra Government</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6">
@@ -124,9 +133,9 @@
         <div class="col-md-3 col-sm-6">
           <h3>Media Resource</h3>
           <ul class="list-unstyled">
-            <li><a href="">Press Releases</a></li>
-            <li><a href="">Photo Gallery</a></li>
-            <li><a href="">Video Gallery</a></li>
+            <li><a href="#">Press Releases</a></li>
+            <li><a href="#">Photo Gallery</a></li>
+            <li><a href="#">Video Gallery</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6">
@@ -148,7 +157,6 @@
       </div>
     </div>
   </footer>
-
   <!-- Footer End -->
 
   <!-- Bootstrap JS -->
