--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -39,16 +39,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
-                    <div class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-                    </div>
-                    <div class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-                    </div>
+                    </li>
                 </ul>
             </div>
+        </div>
     </nav>
-
     <!-- Navbar End -->
 
     <!-- slideshow -->
@@ -82,42 +82,36 @@
                     <a href="eknathshinde.html"><button class="btn btn-primary">Read Story</button></a>
                 </div>
             </div>
-
             <div class="carousel-item">
-                <img class="d-block w-100" src="image/rahulNew.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="image/rahulNew.jpg" alt="Fourth slide">
                 <div class="carousel-caption d-none d-md-block">
                     <a href="rahulshewale.html"><button class="btn btn-primary">Read Story</button></a>
                 </div>
             </div>
-
             <div class="carousel-item">
                 <img class="d-block w-100" src="image/anandRaoNew.jpg" alt="Fifth slide">
                 <div class="carousel-caption d-none d-md-block">
                     <a href="anandraoadsul.html"><button class="btn btn-primary">Read Story</button></a>
                 </div>
             </div>
-
             <div class="carousel-item">
                 <img class="d-block w-100" src="image/shrikantNew1.jpg" alt="Sixth slide">
                 <div class="carousel-caption d-none d-md-block">
                     <a href="drshrikant.html"><button class="btn btn-primary">Read Story</button></a>
                 </div>
             </div>
-
             <div class="carousel-item">
                 <img class="d-block w-100" src="image/abhijeetNew1.jpg" alt="Seventh slide">
                 <div class="carousel-caption d-none d-md-block">
                     <a href="abhijit.html"><button class="btn btn-primary">Read Story</button></a>
                 </div>
             </div>
-
             <div class="carousel-item">
                 <img class="d-block w-100" src="image/anshumman.jpg" alt="Eighth slide">
                 <div class="carousel-caption d-none d-md-block">
                     <a href="anshuman.html"><button class="btn btn-primary">Read Story</button></a>
                 </div>
             </div>
-
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -128,6 +122,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
     <!-- slideshow End -->
 
     <!-- Image Gallery -->
@@ -138,19 +133,19 @@
                     <a target="_blank" href="image/img.jpeg">
                         <img src="image/img.jpeg" alt="img">
                     </a>
-                    <div class="desc">Shiv Sena launches Delhi unit, Eknath Shinde to visit soon</div>
+                    <div class="desc">With the launch of the Delhi unit, the national capital becomes the 20th
+                        State/Union Territory to have a Shiv Sena uni</div>
                     <a class="gallery-button" href="https://rb.gy/u01n9" target="_blank">Read More</a>
                 </div>
             </div>
-
 
             <div class="responsive">
                 <div class="gallery">
                     <a target="_blank" href="image/img5.jpeg">
                         <img src="image/img5.jpeg" alt="img5">
                     </a>
-                    <div class="desc">Eknath Shinde-led Shiv Sena launches Delhi unit, vows to apply ‘Maharashtra model’
-                    </div>
+                    <div class="desc">With the launch of the Delhi unit, the national capital becomes the 20th
+                        State/Union Territory to have a Shiv Sena uni</div>
                     <a class="gallery-button" href="https://rb.gy/u01n9" target="_blank">Read More</a>
                 </div>
             </div>
@@ -179,19 +174,20 @@
         </div>
         <div class="clearfix"></div>
     </section>
+
     <!-- Image Gallery End -->
 
 
     <!-- Footer -->
-    <footer class="text-white py-5">
+    <footer class="bg-orange text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="">Our Ideology</a></li>
-                        <li><a href="">Our Ministers in Maharashtra Government</a></li>
+                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -210,9 +206,9 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
-                        <li><a href="">Press Releases</a></li>
-                        <li><a href="">Photo Gallery</a></li>
-                        <li><a href="">Video Gallery</a></li>
+                        <li><a href="#">Press Releases</a></li>
+                        <li><a href="#">Photo Gallery</a></li>
+                        <li><a href="#">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -234,7 +230,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer End -->
 
     <!-- Bootstrap JS -->
